--- a/info.yaml
+++ b/info.yaml
@@ -3,7 +3,7 @@ project:
   title:        "Senol Gulgonul tt09"      # Project title
   author:       "Senol Gulgonul"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "Display the letters of "SEnOLGULGONUL" on 7-Seg using internal oscillator"      # One line description of what your project does
+  description:  "Display the letters of SEnOLGULGONUL on 7-Seg using internal oscillator"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
